--- a/client/src/components/playlists/Playlists.module.css
+++ b/client/src/components/playlists/Playlists.module.css
@@ -9,6 +9,19 @@
   border-bottom: none;
 }
 
+.playlistRow .deleteButton {
+  background: none;
+  border: none;
+  color: #ff4444;
+  cursor: pointer;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+}
+
+.playlistRow .deleteButton:hover {
+  color: #ff0000;
+}
+
 .playlistTitle {
   font-weight: 600;
 }
