--- a/client/src/components/playlists/Playlists.module.css
+++ b/client/src/components/playlists/Playlists.module.css
@@ -16,6 +16,7 @@
   cursor: pointer;
   font-size: 1.2rem;
   padding: 0.5rem;
+  margin-left: auto;
 }
 
 .playlistRow .deleteButton:hover {
@@ -54,8 +55,8 @@
 
 .playlistForm .fields input {
   flex: 1;
-  min-width: 200px;
-  max-width: 400px;
+  min-width: 5rem;
+  max-width: 20rem;
   padding: 0.5rem;
   border: 1px solid #ccc;
   border-radius: 4px;
