Update trackrow so play fields are optional and Add messages for empty lists

--- a/client/src/components/tracks/TrackRow.module.css
+++ b/client/src/components/tracks/TrackRow.module.css
@@ -63,3 +63,9 @@
 .playlistMenu div:hover {
   background: #383838;
 }
+
+.noTracks {
+  margin-top: 2rem;
+  text-align: center;
+  color: #767676;
+}
