--- a/client/src/components/playlists/Playlists.module.css
+++ b/client/src/components/playlists/Playlists.module.css
@@ -74,3 +74,9 @@
 .playlistForm .fields button:hover {
   background-color: #0056b3;
 }
+
+.noPlaylists {
+  margin-top: 2rem;
+  text-align: center;
+  color: #767676;
+}
