--- a/client/src/components/playlists/Playlists.module.css
+++ b/client/src/components/playlists/Playlists.module.css
@@ -11,7 +11,7 @@
   border-bottom: none;
 }
 
-.playlistRow .deleteButton {
+.deleteButton {
   background: none;
   border: none;
   color: #ff4444;
@@ -21,7 +21,7 @@
   margin-left: auto;
 }
 
-.playlistRow .deleteButton:hover {
+.deleteButton:hover {
   color: #ff0000;
 }
 
@@ -107,4 +107,40 @@
 
 .tracksList {
   padding-left: 1.5rem;
+}
+
+.trackRow {
+  display: flex;
+  align-items: center;
+  height: 5rem;
+  border-bottom: 1px solid #333;
+}
+
+.trackRow:last-child {
+  border-bottom: none;
+}
+
+.trackPlay {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  background: #333;
+  box-shadow: 0;
+  border: 0;
+  margin-right: 1rem;
+  padding: 0;
+}
+
+.trackTitle {
+  font-weight: 600;
+}
+
+.trackArtist {
+  color: #767676;
+}
+
+.noTracks {
+  margin-top: 2rem;
+  text-align: center;
+  color: #767676;
 }
